Fix icon spacing so empty space with underline doesn't display

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -144,6 +144,7 @@ article {
 	width: $gutterY;
 	height: $gutterX;
 	background-size: $gutterX;
+	margin-right: $gutterX / 2;
 }
 .icon-spec {
 	background-image: url(images/html5.png);
